# sample-partner-solution-scoping-engine

./: .gitallowed  .gitignore  NOTICE  OSPI.md  README.md
backend/: __init__.py  __main__.py  app.py  gunicorn.conf.py  pyproject.toml  wsgi.py
backend/config/: README.md  __init__.py  app_config.py  aws_service_validations.json  config-template.json  mcp.json  personas.py
backend/middleware/: __init__.py  auth_middleware.py
backend/models/: __init__.py  chat.py  chat_context.py  chat_variables.py  sa_review.py  support_relationship.py  user.py
backend/routes/: __init__.py  admin_routes.py  auth_routes.py  chat_routes.py  document_routes.py  file_routes.py  nova_act_routes.py  persona_routes.py  sa_review_routes.py  sow_routes.py  support_routes.py  wafr_routes.py
backend/scripts/: create_token_usage_table.sql
backend/services/: __init__.py  alb_auth_provider.py  audit_service.py  auth_service.py  bedrock_service.py  chat_service.py  db_service.py  document_processor.py  mcp_client_service.py  mcp_server_manager.py  message_processor.py  notification_service.py  oauth2_provider.py  saml_provider.py  token_usage_logger.py  tool_registry.py
backend/utils/: __init__.py  file_reader.py  logger.py  mcp_logger.py  redis_credential_provider.py
cloudformation/: 01-route53.yaml  02-security.yaml  (+22 more)
mcp_servers/src/aws-service-validation-mcp-server/: LICENSE  README.md  pyproject.toml
mcp_servers/src/aws-service-validation-mcp-server/awslabs/: __init__.py
mcp_servers/src/aws-service-validation-mcp-server/awslabs/aws_service_validation_mcp_server/: __init__.py  server.py
mcp_servers/src/aws-service-validation-mcp-server/tests/: __init__.py  test_documentation_integration.py  test_vmc_validation.py
mcp_servers/src/aws-well-architected-framework-mcp-server/: README.md  pyproject.toml
mcp_servers/src/aws-well-architected-framework-mcp-server/awslabs/: __init__.py
mcp_servers/src/aws-well-architected-framework-mcp-server/awslabs/aws_well_architected_framework_mcp_server/: __init__.py  aws_docs_enhancer.py  aws_documentation_client.py  aws_service_catalog.py  aws_service_info_client.py  aws_services_catalog.json  aws_wellarchitected_client.py  consts.py  cost_analysis_client.py  document_metadata_storage.py  docx_generator.py  dynamic_documentation_engine.py  enhanced_config.py  enhanced_s3_manager.py  improved_aws_client.py  performance_monitor.py  performance_optimized_s3_loader.py  s3_manager.py  security_hardened_s3_client.py  server.py  template_engine.py  wafr_claude_content_generator.py  wafr_data_models.py  wafr_data_processor.py  wafr_question_framework.py  wafr_workflow_engine.py  wafr_workflow_engine_quality.py
mcp_servers/src/aws-well-architected-framework-mcp-server/awslabs/aws_well_architected_framework_mcp_server/config/: README.md  __init__.py  configuration_manager.py
mcp_servers/src/aws-well-architected-framework-mcp-server/awslabs/aws_well_architected_framework_mcp_server/core/: __init__.py  advanced_visualization_engine.py  assessment_quality_metrics.py  aws_documentation_linker.py  bedrock_multimodal_engine.py  business_impact_quantifier.py  caching_manager.py  capability_detection_validator.py  capability_inference_engine.py  capability_rules.py  capability_scorer.py  compatibility_layer.py  enhanced_recommendation_engine.py  enhanced_recommendation_engine.py.old  enhanced_scoring_error_handler.py  error_handler.py  evidence_based_scoring_explainer.py  evidence_validator.py  feature_flags.py  health_check.py  hybrid_question_strategy.py  iac_evidence_extractor.py  implementation_roadmap_generator.py  intelligent_capability_mapper.py  logger.py  optimized_scoring_algorithms.py  pattern_adjuster.py  performance_optimizer.py  production_monitoring.py  remediation_guidance.py  report_generation_policy.py  report_validation_engine.py  score_transparency_engine.py  scoring_error_tracker.py  scoring_logger.py  scoring_performance_monitor.py  service_categorizer.py  service_specific_analyzer.py  user_guidance_system.py  validation_integration.py  (+1 more)
mcp_servers/src/funding-reviewer-mcp-server/: .dockerignore  .env.example  .env.template  .gitignore  CONFIGURATION.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  docker-healthcheck.sh  pyproject.toml  pytest.ini
mcp_servers/src/funding-reviewer-mcp-server/awslabs/: __init__.py
mcp_servers/src/funding-reviewer-mcp-server/awslabs/funding_reviewer_mcp_server/: __init__.py  bedrock_analysis_engine.py  config.py  document_processor.py  models.py  s3_manager.py  server.py
mcp_servers/src/funding-reviewer-mcp-server/scripts/: health-check.sh  start.sh  stop.sh  validate-deployment.sh  validate_mcp_compliance.py  validate_tools_simple.py
mcp_servers/src/pricing-calculator-mcp-server/: README.md  pyproject.toml
mcp_servers/src/pricing-calculator-mcp-server/awslabs/pricing_calculator_mcp_server/: __init__.py  calc_instructions.py  config.py  models.py  server.py  service_lookup.py
mcp_servers/src/pricing-calculator-mcp-server/service_definitions/: service_name_mapping.json
mcp_servers/src/pricing-calculator-mcp-server/service_definitions/defs/: aWSDataSync.json  aWSDataTransfer.json  aWSDirectoryService.json  aWSLambda.json  aWSPricingCalculatorStrings.json  aWSStorageGateway.json  aWSTransferForSFTP.json  activeCustomBatchTranslation.json  agentCoreBrowserTools.json  agentCoreCodeInterpreter.json  agentCoreGateway.json  agentCoreIdentity.json  agentCoreMemory.json  agentCoreRuntime.json  amazonApiGateway.json  amazonAppFlow.json  amazonAppStream.json  amazonAthena.json  amazonAugmentedAi.json  amazonAuroraBackup.json  amazonAuroraMySQLCompatible.json  amazonBedrock.json  amazonBedrockAgentCore.json  amazonBraket.json  amazonCarrierIp.json  amazonCertificateManager.json  amazonChime.json  amazonChimeSdk.json  amazonChimeTCO.json  amazonCloudFront.json  amazonCloudWatch.json  amazonCodeGuru.json  amazonCodeWhisperer.json  amazonCognito.json  amazonComprehend.json  amazonComprehendMedical.json  amazonDetective.json  amazonDevOpsGuru.json  amazonDocumentDB.json  amazonDocumentDbBackup.json  (+385 more)
(+185 files in other folders)
