[project]
name = "SERA-backend"
version = "0.1.0"
description = "Solutions Engine for Recommending AWS backend. Uses Flask with Bedrock APIs."
readme = "README.md"
requires-python = ">=3.12.8"

authors = [
    {name = "Amazon Web Services"},
]

dependencies = [
    "cryptography>=46.0.7",
    "Flask>=3.0.0",
    "Flask-Cors>=4.0.0",
    "flask-session>=0.8.0",
    "Flask-WTF>=1.2.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.40.25",
    "watchtower>=3.0.0",
    "gunicorn>=23.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=26.3.1",
    "flake8>=7.0.0",
    "Flask-SQLAlchemy>=3.1.0",
    "PyMySQL>=1.1.0",
    "redis>=5.0.0",
    "fastmcp>=3.2.0",
    "authlib>=1.6.9",
    "requests>=2.32.4",
    "requests-auth-aws-sigv4>=0.7",
    "cachetools>=6.2.0",
    "nova-act>=3.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "pyjwt>=2.12.0",
    "aiohttp>=3.14.0",
]
