[project]
name = "awslabs.aws-service-validation-mcp-server"
version = "0.1.0"
description = "An AWS Labs Model Context Protocol (MCP) server for AWS Service Validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.10.6",
    "boto3>=1.36.20",
    "bs4>=0.0.2",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "typing-extensions>=4.8.0",
    "loguru>=0.7.0",
]
license = {text = "Apache-2.0"}
license-files = ["LICENSE"]

authors = [
    {name = "Amazon Web Services"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"awslabs.aws-service-validation-mcp-server" = "awslabs.aws_service_validation_mcp_server.server:main"

[dependency-groups]
dev = [
    "commitizen>=4.2.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "pyright>=1.1.398",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]
