[project]
name = "awslabs.aws-well-architected-framework-mcp-server"
version = "0.2.0"
description = "Comprehensive AWS Well-Architected Framework Assessment MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.11.0",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "python-docx>=1.1.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.14.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "ruff>=0.0.291",
    "pyright>=1.1.0",
]


[tool.setuptools]
packages = {find = {where = ["."]}}

[project.scripts]
"awslabs.aws-well-architected-framework-mcp-server" = "awslabs.aws_well_architected_framework_mcp_server.server:main"

[project.entry-points.mcp]
aws-well-architected-framework-mcp-server = "awslabs.aws_well_architected_framework_mcp_server.server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
    "awslabs/well_architected_security_mcp_server/__init__.py:__version__"
]
update_changelog_on_bump = true

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".venv",
    "**/__pycache__"]

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["E", "F", "I", "B", "Q"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["awslabs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.bandit]
exclude_dirs = ["venv", ".venv"]
