[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-funding-reviewer-mcp-server"
version = "1.0.0"
description = "MCP server for automated POC funding compliance analysis using AWS Bedrock"
authors = [
    { name = "AWS Labs", email = "aws-labs@amazon.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "aws", "bedrock", "poc", "funding", "compliance", "analysis"]

dependencies = [
    "mcp[cli]>=1.6.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "requests>=2.31.0",  # For downloading from public URLs
    "pypdf>=6.13.3",  # For basic PDF validation (page count, encryption check)
    "pillow>=10.0.0",  # For basic image validation (dimensions, format)
    "python-docx>=1.1.0",  # For reference document loading
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "reportlab>=4.4.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pandas>=2.0.0",  # Optional for CSV metadata analysis in development
]

[project.urls]
Homepage = "https://github.com/awslabs/poc-funding-reviewer-mcp-server"
Repository = "https://github.com/awslabs/poc-funding-reviewer-mcp-server"
Documentation = "https://github.com/awslabs/poc-funding-reviewer-mcp-server/blob/main/README.md"
Issues = "https://github.com/awslabs/poc-funding-reviewer-mcp-server/issues"

[project.scripts]
"awslabs.funding-reviewer-mcp-server" = "awslabs.funding_reviewer_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["awslabs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=awslabs.poc_funding_reviewer_mcp_server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["awslabs/poc_funding_reviewer_mcp_server"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "requests>=2.31.0",
]
