[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricing-calculator-mcp-server"
version = "0.1.0"
description = "AWS Pricing Calculator Link Generator MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "cachetools>=6.2.1",
]

[project.scripts]
pricing-calculator-mcp-server = "awslabs.pricing_calculator_mcp_server.server:main"
